[types] Rename ScriptFunction EntryFunction
