# ecosystem/indexer-server/doc/openapi.yaml
@@ -1175,13 +1175,13 @@ components:
     TransactionPayload:
       title: Transaction Payload
       oneOf:
-        - $ref: '#/components/schemas/ScriptFunctionPayload'
+        - $ref: '#/components/schemas/EntryFunctionPayload'
         - $ref: '#/components/schemas/ScriptPayload'
         - $ref: '#/components/schemas/ModuleBundlePayload'
         - $ref: '#/components/schemas/WriteSetPayload'
       discriminator:
         propertyName: type
-    ScriptFunctionPayload:
+    EntryFunctionPayload:
       title: Script Function Payload
       type: object
       required:
@@ -1193,7 +1193,7 @@ components:
         type:
           type: string
         function:
-          $ref: '#/components/schemas/ScriptFunctionId'
+          $ref: '#/components/schemas/EntryFunctionId'
         type_arguments:
           type: array
           description: Generic type arguments required by the script function.
@@ -1205,7 +1205,7 @@ components:
           items:
             $ref: '#/components/schemas/MoveValue'
       example:
-        type: "script_function_payload"
+        type: "entry_function_payload"
         function: "0x1::PaymentScripts::peer_to_peer_with_metadata"
         type_arguments:
           - "0x1::XDX::XDX"
@@ -1214,7 +1214,7 @@ components:
           - "2021000000"
           - "0x"
           - "0x"
-    ScriptFunctionId:
+    EntryFunctionId:
       title: Script Function ID
       type: string
       description: |
