# ecosystem/indexer-server/typescript/src/openapi-schema.ts
@@ -522,14 +522,14 @@ export interface components {
     } & components["schemas"]["OnChainTransactionInfo"];
     /** Transaction Payload */
     TransactionPayload:
-      | components["schemas"]["ScriptFunctionPayload"]
+      | components["schemas"]["EntryFunctionPayload"]
       | components["schemas"]["ScriptPayload"]
       | components["schemas"]["ModuleBundlePayload"]
       | components["schemas"]["WriteSetPayload"];
     /**
      * Script Function Payload
      * @example {
-     *   "type": "script_function_payload",
+     *   "type": "entry_function_payload",
      *   "function": "0x1::PaymentScripts::peer_to_peer_with_metadata",
      *   "type_arguments": [
      *     "0x1::XDX::XDX"
@@ -542,9 +542,9 @@ export interface components {
      *   ]
      * }
      */
-    ScriptFunctionPayload: {
+    EntryFunctionPayload: {
       type: string;
-      function: components["schemas"]["ScriptFunctionId"];
+      function: components["schemas"]["EntryFunctionId"];
       /** @description Generic type arguments required by the script function. */
       type_arguments: components["schemas"]["MoveTypeTagId"][];
       /** @description The script function arguments. */
@@ -560,7 +560,7 @@ export interface components {
      *
      * @example 0x1::PaymentScripts::peer_to_peer_with_metadata
      */
-    ScriptFunctionId: string;
+    EntryFunctionId: string;
     /** Script Payload */
     ScriptPayload: {
       /** @example script_payload */
